# proto-typed

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  make_flex_bison.sh  proto-typed.md  ptc.cpp  ptc.hpp  readme.md  readme_old.md  run_pt.sh
analysis/: CMakeLists.txt  constant_folder.cpp  constant_folder.hpp  function_analysis.cpp  function_analysis.hpp  ptc_pipeline.cpp  ptc_pipeline.hpp
backend/: CMakeLists.txt  backend_pipeline.cpp  backend_pipeline.hpp  codegen.cpp  codegen.hpp  ptlib.cpp  ptlib.hpp
cmake/modules/: AddPtc.cmake
frontend/: CMakeLists.txt  FlexLexer.h  lexer.cpp  lexer.hpp  lexer.ll  parser.cpp  parser.hpp  parser.yy  scanner.cpp  scanner.hpp
gc/: libcord.so.1.5.0  libgc.so.1.5.1
highlighters/vscode/pt-lang/: README.md  package.json
highlighters/vscode/pt-lang/syntaxes/: pt.tmLanguage.json
ir/: CMakeLists.txt  expression.cpp  expression.hpp  ir.cpp  ir.hpp  resolver.cpp  resolver.hpp  scope.cpp  scope.hpp
lib/: dfp.pt
pt/: pt.cpp  pt.hpp
ptc/: CMakeLists.txt  diagnostics.def  error.cpp  error.hpp  libpt.ll  libpt.pt  libptl.ll  logging.cpp  logging.hpp  ptc.cpp  ptc.hpp  ptlib.cpp  ptlib.hpp  ptlib.ll  ptlib.pt  utils.cpp  utils.hpp
tests/: any.pt  array_resolver.pt  arrays.pt  casting.pt  const_folding.pt  decimal.pt  empty.pt  expressions.pt  fib.pt  floats.pt  funvar.pt  funvardecl.pt  hash_table.pt  maybe_assignment.pt  maybe_type_arrays.pt  maybes.pt  missing_return.pt  modules.pt  modules2.pt  numbers.pt  old_bugs.pt  ptlib_arrays.pt  ptlib_env.pt  ptlib_io.pt  ptlib_math.pt  ptlib_sort.pt  ptlib_strings.pt  run-tests.sh  statements.pt  strings.pt  structs.pt  syntax.pt  var.pt
tests/xfails/: nested_fun.pt
