set(LLVM_LINK_COMPONENTS
  ${LLVM_TARGETS_TO_BUILD}
  Analysis
  CodeGen
  Core
  IPO
  AggressiveInstCombine
  InstCombine
  Instrumentation
  MC
  MCParser
  ObjCARCOpts
  Option
  ScalarOpts
  Support
  TransformUtils
  Vectorize
)

add_ptc_tool(ptc
  ptc.cpp
  logging.cpp
)

target_link_libraries(ptc
    PRIVATE
    ptcfrontend
    ptcir
    ptcbackend
)